--- a/our-advantages.html
+++ b/our-advantages.html
@@ -14,12 +14,12 @@
     <section class="naav-bar">
         <div class="top">
             <div class="left">
-                <p>01554013330</p>
+                <p>01007559517</p>
                 <h4>(معتمدة-خبرة10 عام) مستشفى خاص</h4>
             </div>
             <div class="right">
-                <h1> مركز الأمان للطب النفسي وعالج اإلدمان </h1>
-                <img src="./images/FB_IMG_1670076929189.jpg" alt="">
+                <h1>مركز الأمان للطب النفسى وعلاج الإدمان</h1>
+                <img src="./images/PhotoRoom-20221205_154937.png" alt="">
             </div>
         </div>
         <div class="bottn">
@@ -37,11 +37,15 @@
     </section>
     <!-- end nav -->
         <div class="our-advan">
+            <div class="float-img1">
+                <img src="./images/FB_IMG_1670079316025.jpg" alt="">
+            </div>
+            <div class="float-img2"></div>
             <h1>! مميزاتنا</h1>
             <div class="body">
                 <p>
                     مجهولية تامة عن المريض<br>
-                    تعاملتنا بسرية تامه مع المريض يقال ان السر اذا تعدي اثنين شاع
+                    تعاملنا بسرية تامه مع المريض يقال ان السر اذا تعدي اثنين شاع
                     <br>
                     والسر هو كل امر نسره في انفسنا حدث او لم يحدث
                     <br>
@@ -55,9 +59,9 @@
                     <br>
                         44% من مرضى الإكتئاب المقاوم للعلاج مش بيتشخصوا صح بسبب قلة 
                     <br>
-                    الوعي واإلحساس بالعاربسبب نظرة المجتمع اتجاه المرضي النفسيين
+                    الوعي والإحساس بالعار بسبب نظرة المجتمع اتجاه المرضي النفسيين
                     <br>
-                    دورنا اننا ندعمهم ونعرف ان اإلكتئاب زي اي مرض بيحتاج لدكتور وعالج
+                      دورنا اننا ندعمهم ونعرف ان الإكتئاب زي أى مرض بيحتاج لدكتور وعلاج
                     <br>
                     عشان تقدر تتغلب عليه
 
@@ -71,9 +75,10 @@
     <section class="footer">
         <h5>جميع الحقوق محفوظة © 2022 مركز الأمان للطب النفسى</h5>
         <div class="icons">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook-messenger"></i>
+            <i class="fa-brands fa-whatsapp icn"></i>
+            <i class="fa-brands fa-instagram icn"></i>
+            <i class="fa-brands fa-facebook-messenger icn"></i>
+            <i class="fa-brands fa-facebook icn"></i>
             
         </div>
     </section>
