--- a/treatment-ways.html
+++ b/treatment-ways.html
@@ -14,12 +14,12 @@
     <section class="naav-bar">
         <div class="top">
             <div class="left">
-                <p>01554013330</p>
+                <p>01007559517</p>
                 <h4>(معتمدة-خبرة10 عام) مستشفى خاص</h4>
             </div>
             <div class="right">
-                <h1> مركز الأمان للطب النفسي وعالج اإلدمان </h1>
-                <img src="./images/FB_IMG_1670076929189.jpg" alt="">
+                <h1>مركز الأمان للطب النفسى وعلاج الإدمان</h1>
+                <img src="./images/PhotoRoom-20221205_154937.png" alt="">
             </div>
         </div>
         <div class="bottn">
@@ -37,37 +37,40 @@
     </section>
     <!-- end nav -->
         <div class="ways-body">
+            <div class="float-img1">
+                <img src="./images/FB_IMG_1670078495662.jpg" alt="">
+            </div>
             <h1>طرق التعامل مع الإدمان</h1>
             <p>
-                ! اإلدمان مرض يصيب الشخص واألسرة بالكامل
+                ! الإدمان مرض يصيب الشخص والأسرة بالكامل
                 <br>
-                . وبيسبب أنانية كبيرة للمدمن بتخليه يفقد االحساس بكل اللي حوالية ويفضل مصلحته عن أي حد
+                . وبيسبب وبيسبب أنانية كبيرة للمدمن بتخليه يفقد الإحساس بكل اللي حوالية ويفضل مصلحته عن أي حد
                 <br>
-                متستسلمش للهالك و لضعفك وغير حياتك لألفضل و اتعالج قبل فوات األوان
+                متستسلمش للهلاك و لضعفك وغير حياتك للأفضل و اتعالج قبل فوات األوان
                 <br>
                 دلوقتي تقدر تتعالج و تقضي على المخدرات علشان االمان بتمدلك ايديها بـــ
                 <br>
-                أفضل البرامج العالجية التي تتم تحت إشراف نخبة من األطباء المتخصصين في عالج اإلدمان و منها-
+                أفضل البرامج العلاجية التي تتم تحت إشراف نخبة من الأطباء المتخصصين في علاج الإدمان و منها-
                 <br>
-                . ( برامج عالجية فردية , برامج عالجية جماعية )
+                . ( برامج علاجية فردية , برامج علاجية جماعية )
                 <br>
-                . مرحلة العالج تتم في سرية تامة علشان تحافظ على خصوصيتك وخصوصية أسرتك
+                . مرحلة العلاج تتم في سرية تامة علشان تحافظ على خصوصيتك وخصوصية أسرتك
                 <br><br><br><br>
-                : خالل فترة العالج
+                : خلال فترة العلاج
                 <br>
-                يوجد برامج ترفيهية ورحالت ضمن برامج العالج + الخدمة 
+                يوجد برامج ترفيهية ورحلات ضمن برامج العلاج + الخدمة 
                  الفندقية المميزة
                 <br>
-                تقديم النصائح واالرشادات االسرية وفتح باب االستفسارات 
-                 بإستمرار وتقديم الدعم ألسر المرضى 
+                تقديم النصائح والإرشادات السرية وفتح باب الإستفسارات 
+                 بإستمرار وتقديم الدعم ألسرى المرضى 
                 <br>
-                هتتم المتابعة مع األطباء المشرفين 
-              مترجعش تاني للمخدرات
+                تتم المتابعة مع الأطباء المشرفين 
+             علشان  مترجعش تاني للمخدرات
               <br>
-              هتساعدك في القضاء على األفكار السلبيه اللي أدت بيك لإلدمان 
-            بأفكار إيجابية ألننا متخصصين في  العالج النفسي 
+              هنساعدك في القضاء على الأفكار السلبيه اللي أدت بيك للإدمان 
+            بأفكار إيجابية لأننا متخصصين في  العلاج النفسي 
             <BR>
-                كما يوجد قسم خاص لعالج جميع االضطرابات واالمراض 
+                كما يوجد قسم خاص لعلاج جميع الإضطرابات والأ مراض 
                 النفسيه تحت نخبه من استشاري الطب النفسي
 
             </p>
@@ -77,9 +80,10 @@
     <section class="footer">
         <h5>جميع الحقوق محفوظة © 2022 مركز الأمان للطب النفسى</h5>
         <div class="icons">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook-messenger"></i>
+            <i class="fa-brands fa-whatsapp icn"></i>
+            <i class="fa-brands fa-instagram icn"></i>
+            <i class="fa-brands fa-facebook-messenger icn"></i>
+            <i class="fa-brands fa-facebook icn"></i>
             
         </div>
     </section>
