--- a/about-us.html
+++ b/about-us.html
@@ -14,12 +14,12 @@
     <section class="naav-bar">
         <div class="top">
             <div class="left">
-                <p>01554013330</p>
+                <p>01007559517</p>
                 <h4>(معتمدة-خبرة10 عام) مستشفى خاص</h4>
             </div>
             <div class="right">
-                <h1> مركز الأمان للطب النفسي وعالج اإلدمان </h1>
-                <img src="./images/FB_IMG_1670076929189.jpg" alt="">
+                <h1> مركز الأمان للطب النفسى وعلاج الإدمان</h1>
+                <img src="./images/logo1.jpg" alt="">
             </div>
         </div>
         <div class="bottn">
@@ -73,9 +73,10 @@
     <section class="footer">
         <h5>جميع الحقوق محفوظة © 2022 مركز الأمان للطب النفسى</h5>
         <div class="icons">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook-messenger"></i>
+            <i class="fa-brands fa-whatsapp icn"></i>
+            <i class="fa-brands fa-instagram icn"></i>
+            <i class="fa-brands fa-facebook-messenger icn"></i>
+            <i class="fa-brands fa-facebook icn"></i>
             
         </div>
     </section>
