--- a/stages-of-treatment.html
+++ b/stages-of-treatment.html
@@ -14,12 +14,12 @@
     <section class="naav-bar">
         <div class="top">
             <div class="left">
-                <p>01554013330</p>
+                <p>01007559517</p>
                 <h4>(معتمدة-خبرة10 عام) مستشفى خاص</h4>
             </div>
             <div class="right">
-                <h1> مركز الأمان للطب النفسي وعالج اإلدمان </h1>
-                <img src="./images/FB_IMG_1670076929189.jpg" alt="">
+                <h1>مركز الأمان للطب النفسى وعلاج الإدمان</h1>
+                <img src="./images/PhotoRoom-20221205_154937.png" alt="">
             </div>
         </div>
         <div class="bottn">
@@ -37,25 +37,28 @@
     </section>
     <!-- end nav -->
         <div class="treatment-body">
+            <div class="float-img1">
+                <img src="./images/body1.jpg" alt="">
+            </div>
             <h1>مراحل عالج الإدمان</h1>
             <h5>خطوات علاج الإدمان</h5>
             <p>
                 أذا كنت تتعاطى الهيروين أو الشابوا أو الحشيش أو االستروكس أو الكحول أو الترمادول أو الكوكايين أو الفودوو أو البودر أو أي<br>
-                مخدرات أخري اقرأ المقال لألخر.<br> <br>
-                المخدرات دائمآ ماتكون نهايته الموووت او السجن <br><br>
-                إليك العالج الصحي والكامل مع اقوى برنامج عالجي اثبت نجاحه علي مستوى العالم لالنتهاء من هذا الجحيم المظلم<br><br>
-                يتم العالج بواسطة برنامج شامل للتأهيل النفسي وتعديل السلوك واتباع عدة مراحل يجب المرور بها و اتباعها آلخر العالج<br><br>
-                مراحل العالج<br><br>
-                :دخول البرنامج ويقسم إلى ثالثة مراحل<br><br>
+                مخدرات أخري اقرأ المقال لأخره .<br> <br>
+                المخدرات دائمآ ماتكون نهايتها الموووت او السجن <br><br>
+                إليك العلاج الصحي والكامل مع اقوى برنامج علاجي اثبت نجاحه علي مستوى العالم للإنتهاء من هذا الجحيم المظلم<br><br>
+                يتم العلاج بواسطة برنامج شامل للتأهيل النفسي وتعديل السلوك واتباع عدة مراحل يجب المرور بها و اتباعها لأخر العلاج <br><br>
+                مراحل العلاج<br><br>
+                :دخول البرنامج ويقسم إلى ثلاثة مراحل<br><br>
                 مرحلة نزع السموم-<br><br>
                 :أهداف المرحلة  <br><br>
-                1 -التخلص من جميع المخدرات وتخطى أعراض اإلنسحاب الجسدية للمخدرات بأمان
+                1 -التخلص من جميع المخدرات وتخطى أعراض الإنسحاب الجسدية للمخدرات بأمان
                 <br><br>
-                2 -التخلص من األعراض النفسية للمخدرات
+                2 -التخلص من الأعراض النفسية للمخدرات
                 <br><br>
-                3 -إتخاذ قرار التغيير واإلنتقال للمرحلة الثانية بعد اإلطالع على جميع التفاصيل والموافقة عليها ومعرفة البرامج العالجية المناسبة 
+                3 -إتخاذ قرار التغيير والإنتقال للمرحلة الثانية بعد الإطلاع على جميع التفاصيل والموافقة عليها ومعرفة البرامج العلاجية المناسبة 
                 <br><br>
-                – مرحلة التأهيل النفسي واإلعداد السلوكي للتعامل مع الحياة:-
+                – مرحلة التأهيل النفسي والإعداد السلوكي للتعامل مع الحياة:-
                 <br><br>
                 أهداف المرحلة :- 
                 <br><br>
@@ -63,44 +66,43 @@
                 <br><br>
                 2 -التدريب على الحياة بدون مخدرات مهما كانت من صعوبات او مشاكل.
                 <br><br>
-                3 -التدريب على التعامل مع األفكار والمشاعر واألحاسيس
+                3 -التدريب على التعامل مع الأفكار والمشاعر والأحاسيس
                 <br><br>
-                4 -التدريب على تطبيق برنامج 12 خطوة والبرامج العالجية داخل وخارج الدار.
+                4 -التدريب على تطبيق برنامج 12 خطوة والبرامج العلاجية داخل وخارج الدار.
                 <br><br>
-                5 -وضع خطة قصيرة ومتوسطة وطويلة المدى للحياة الخارجية ومعرفة خطوات تحقيق األهداف
+                5 -وضع خطة قصيرة ومتوسطة وطويلة المدى للحياة الخارجية ومعرفة خطوات تحقيق الأهداف
                 <br><br>
                 6 -تطبيق البرنامج الروحانى والديني داخل الدار وخارجه 
                 <br><br>
                 7 -نزول أجازات تدريجية مع مدربيين متخصصين فى أول أجازات لتطبيق الخطط العالجية المتعلمة داخل الدار على أرض 
                 <br>
-                الواقع والرجوع للدار لحل أى مشاكل ومعرفة طرق جديدة لإلستمتاع والتعود علي الحياة بدون مخدرات . 
+                الواقع والرجوع للدار لحل أى مشاكل ومعرفة طرق جديدة للإستمتاع والتعود علي الحياة بدون مخدرات . 
                 <br><br>
-                8 -عالج نفسى والتدريب على التعامل مع األضطرابات الشخصية والمزاجية من خالل جلسات نفسية متخصصة. 
+                8 -علاج نفسى والتدريب على التعامل مع الإضطرابات الشخصية والمزاجية من خلال جلسات نفسية متخصصة. 
                 <br><br>
-                9 -عالج أسرى وعالج للمتزوجين.
+                9 -عالج أسرى وعلاج للمتزوجين.
                 <br><br>
-                0 -عالج بالسيكودراما للتفريغ النفسى والتدريب العملى على التعامل مع المواقف واألشخاص عالية الخطورة
+                0 -علاج بالسيكودراما للتفريغ النفسى والتدريب العملى على التعامل مع المواقف والأشخاص عالية الخطورة
                 <br><br>
-                1 -عالج جماعى للتعامل مع األحساس واألفكار والمهارات ووضع 
-                األهداف والتنمية البشرية ومهارات الحياة واكتساب الثقه بالنفس 
+                1 -علاج جماعى للتعامل مع الأحساس والأفكار والمهارات ووضع 
+                الأهداف والتنمية البشرية ومهارات الحياة واكتساب الثقه بالنفس 
                 <br><br>
-                2 -يتكون البرنامج من ست مراحل عالجية لكل مرحلة أهدافه ومميزاته 
-                فى الخطة العالجية 
+                2 -يتكون البرنامج من ست مراحل علاجية لكل مرحلة أهدافها ومميزاته 
+                فى الخطة العلاجية 
                 <br><br>
-                – مرحلة منع اإلنتكاسة ) المتابعة ( ودي مهمه جدآ بعد خروج العميل من 
-                الدار واتمام شفائه..
+                – مرحلة منع الإنتكاسة - ودى مرحلة مهمة جدابعد خروج العميل من الدار
                 <br><br>
-                1 -إتمام جلسة أو جلستين أسبوعياً مع الفريق العالجى لمتابعة خطة
+                1 -إتمام جلسة أو جلستين أسبوعياً مع الفريق العلاجى لمتابعة خطة
                 التخرج والمشاكل الخارجية وكيفية التعامل معها 
                 <br><br>
                 ملحوظه مهمه جدآ 
                 <br><br>
-                #لكل اب ولكل أم لو ابنك او بنتك مدمن مخدرات االدمان مرض ومرض 
+                #لكل اب ولكل أم لو ابنك او بنتك مدمن مخدرات الإدمان مرض ومرض 
                 بالفعل..
                 <br><br>
-                #حاولو تقرأو اكتر عن مرض االدمان عشان تقدرو تساعدو اوالدكم ❤
+                #حاولو تقرأو اكتر عن مرض الإدمان عشان تقدرو تساعدو اولادكم ❤
                 <br><br>
-                #لو ابنك رفض العالج خدله القرار حتى لو بالقوه الن ابنك من جواه بيعاني بس مش قادر يسيطر على نفسه والمخدرات اتحكمت 
+                #لو ابنك رفض العلاج خدله القرار حتى لو بالقوه لإن ابنك من جواه بيعاني بس مش قادر يسيطر على نفسه والمخدرات اتحكمت 
                 في عقله بشكل كامل والمتحدث امامك ليس بابنك بل شيطان المخدرات    
                 <br><br>
                 #لكل مدمن بيعاني كفايه مخدرات كفايه اهانه كفايه خسائر كفايه وخد القرار انك تتعالج واطلب المساعده متتكسفش او تخاف 
@@ -114,9 +116,10 @@
     <section class="footer">
         <h5>جميع الحقوق محفوظة © 2022 مركز الأمان للطب النفسى</h5>
         <div class="icons">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook-messenger"></i>
+            <i class="fa-brands fa-whatsapp icn"></i>
+            <i class="fa-brands fa-instagram icn"></i>
+            <i class="fa-brands fa-facebook-messenger icn"></i>
+            <i class="fa-brands fa-facebook icn"></i>
             
         </div>
     </section>
