--- a/about-us.html
+++ b/about-us.html
@@ -18,13 +18,14 @@
                 <h4>(معتمدة-خبرة10 عام) مستشفى خاص</h4>
             </div>
             <div class="right">
-                <h1> مركز الأمان للطب النفسى وعلاج الإدمان</h1>
-                <img src="./images/logo1.jpg" alt="">
+                <h1>مركز الأمان الجديد للطب النفسي وعلاج الإدمان</h1>
+                <img src="./images/PhotoRoom-20221205_154937.png" alt="">
             </div>
         </div>
         <div class="bottn">
             <ul>
                 <li>
+                    <a href="./drug-kinds.html">أنواع المخدرات</a> 
                     <a href="./stages-of-treatment.html">مراحل علاج الإدمان</a>
                     <a href="./treatment-ways.html">طرق التعامل مع الإدمان</a>
                     <a href="./our-advantages.html">مميزاتنا</a>
@@ -38,6 +39,27 @@
     <!-- end nav -->
         <div class="our-staf">
             <h1>! من نحن</h1>
+            <div class="our-info">
+                <ul>
+                    <li>أكبر مركز طبي فى الدلتا</li>
+                    <li>فرع اعراض الانسحاب بدون ألم </li>
+                    <li>فرعين لإعادة التأهيل(مميز - إقتصادى)</li>
+                    <li>تضم أفضل مستشفى علاج إدمان في مصر فريق طبي متعدد التخصصات لا يقل عدده عن 15 فرد حيث يضم الفريق
+                        <BR>العلاجي الجيد التخصصات التالية
+                    </li>
+                    <li>مدير طبى</li>
+                    <li>الأطباء النفسيين</li>
+                    <li>طاقم تمريض على أعلى مستوى</li>
+                    <li>معالجو الإدمان المرخصون أو المعتمدون</li>
+                    <li>المعالجون الشموليون</li>
+                    <li>أخصائيو التغذية المسجلين</li>
+                    <li>مديري الحالة</li>
+                    <li>فنيو الصحة السلوكية</li>
+                    <li>أخصائيين نفسيين</li>
+                    <li>أخصائيين اجتماعيين</li>
+                </ul>
+            </div>
+            <h2>تعرف عل الطاقم الطبى</h2>
             <div class="body">
                 <div class="img">
                     <img src="./images/1.jpg" alt="">
