--- a/stages-of-treatment.html
+++ b/stages-of-treatment.html
@@ -18,13 +18,14 @@
                 <h4>(معتمدة-خبرة10 عام) مستشفى خاص</h4>
             </div>
             <div class="right">
-                <h1>مركز الأمان للطب النفسى وعلاج الإدمان</h1>
+                <h1>مركز الأمان الجديد للطب النفسي وعلاج الإدمان</h1>
                 <img src="./images/PhotoRoom-20221205_154937.png" alt="">
             </div>
         </div>
         <div class="bottn">
             <ul>
                 <li>
+                    <a href="./drug-kinds.html">أنواع المخدرات</a> 
                     <a href="./stages-of-treatment.html">مراحل علاج الإدمان</a>
                     <a href="./treatment-ways.html">طرق التعامل مع الإدمان</a>
                     <a href="./our-advantages.html">مميزاتنا</a>
