--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="./css/all.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <!-- nav -->
-    <section class="naav-bar">
+     <!-- nav -->
+     <section class="naav-bar">
         <div class="top">
             <div class="left">
                 <p>01007559517</p>
@@ -20,21 +21,20 @@
             <div class="right">
                 <h1>مركز الأمان الجديد للطب النفسي وعلاج الإدمان</h1>
                 <img src="./images/PhotoRoom-20221205_154937.png" alt="">
+                
             </div>
         </div>
-        <div class="bottn">
-            <ul>
-                <li>
-                    <a href="./drug-kinds.html">أنواع المخدرات</a> 
-                    <a href="./stages-of-treatment.html">مراحل علاج الإدمان</a>
-                    <a href="./treatment-ways.html">طرق التعامل مع الإدمان</a>
-                    <a href="./our-advantages.html">مميزاتنا</a>
-                    <a href="./about-us.html">من نحن</a>
-                    <a href="./contact-us.html">تواصل معنا </a>
-                    <a href="./index.html">الرئيسية</a> 
-                </li>
-            </ul>
-        </div>
+        <ul class="bottn">
+            <li>
+                <a href="./drug-kinds.html">أنواع المخدرات</a> 
+                <a href="./stages-of-treatment.html">مراحل علاج الإدمان</a>
+                <a href="./treatment-ways.html">طرق التعامل مع الإدمان</a>
+                <a href="./our-advantages.html">مميزاتنا</a>
+                <a href="./about-us.html">من نحن</a>
+                <a href="./contact-us.html">تواصل معنا </a>
+                <a href="./index.html">الرئيسية</a> 
+            </li>
+        </ul>
     </section>
     <!-- end nav -->
 
