--- a/treatment-ways.html
+++ b/treatment-ways.html
@@ -20,21 +20,20 @@
             <div class="right">
                 <h1>مركز الأمان الجديد للطب النفسي وعلاج الإدمان</h1>
                 <img src="./images/PhotoRoom-20221205_154937.png" alt="">
+               
             </div>
         </div>
-        <div class="bottn">
-            <ul>
-                <li>
-                    <a href="./drug-kinds.html">أنواع المخدرات</a> 
-                    <a href="./stages-of-treatment.html">مراحل علاج الإدمان</a>
-                    <a href="./treatment-ways.html">طرق التعامل مع الإدمان</a>
-                    <a href="./our-advantages.html">مميزاتنا</a>
-                    <a href="./about-us.html">من نحن</a>
-                    <a href="./contact-us.html">تواصل معنا </a>
-                    <a href="./index.html">الرئيسية</a> 
-                </li>
-            </ul>
-        </div>
+        <ul class="bottn">
+            <li>
+                <a href="./drug-kinds.html">أنواع المخدرات</a> 
+                <a href="./stages-of-treatment.html">مراحل علاج الإدمان</a>
+                <a href="./treatment-ways.html">طرق التعامل مع الإدمان</a>
+                <a href="./our-advantages.html">مميزاتنا</a>
+                <a href="./about-us.html">من نحن</a>
+                <a href="./contact-us.html">تواصل معنا </a>
+                <a href="./index.html">الرئيسية</a> 
+            </li>
+        </ul>
     </section>
     <!-- end nav -->
         <div class="ways-body">
