--- a/about-us.html
+++ b/about-us.html
@@ -92,10 +92,10 @@
     <section class="footer">
         <h5>جميع الحقوق محفوظة © 2022 مركز الأمان للطب النفسى</h5>
         <div class="icons">
-            <i class="fa-brands fa-whatsapp icn"></i>
-            <i class="fa-brands fa-instagram icn"></i>
-            <i class="fa-brands fa-facebook-messenger icn"></i>
-            <i class="fa-brands fa-facebook icn"></i>
+            <a href="https: //wa.me/c/201007559517" class="icn" target="_blank"><i class="fa-brands fa-whatsapp "></i></a>
+            <a href="" class="icn"><i class="fa-brands fa-instagram " target="_blank"></i></a>
+            <a href="" class="icn" target="_blank"><i class="fa-brands fa-facebook-messenger "></i></a>
+            <a href="https://www.facebook.com/Alamanelgdeed" class="icn" target="_blank"><i class="fa-brands fa-facebook "></i></a>
             
         </div>
     </section>
