--- a/contact-us.html
+++ b/contact-us.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <!-- nav -->
+    <!-- nav -->    
     <section class="naav-bar">
         <div class="top">
             <div class="left">
@@ -98,10 +98,10 @@
     <section class="footer">
         <h5>جميع الحقوق محفوظة © 2022 مركز الأمان للطب النفسى</h5>
         <div class="icons">
-            <i class="fa-brands fa-whatsapp icn"></i>
-            <i class="fa-brands fa-instagram icn"></i>
-            <i class="fa-brands fa-facebook-messenger icn"></i>
-            <i class="fa-brands fa-facebook icn"></i>
+            <a href="https: //wa.me/c/201007559517" class="icn" target="_blank"><i class="fa-brands fa-whatsapp "></i></a>
+            <a href="" class="icn"><i class="fa-brands fa-instagram " target="_blank"></i></a>
+            <a href="" class="icn" target="_blank"><i class="fa-brands fa-facebook-messenger "></i></a>
+            <a href="https://www.facebook.com/Alamanelgdeed" class="icn" target="_blank"><i class="fa-brands fa-facebook "></i></a>
             
         </div>
     </section>
