--- a/stages-of-treatment.html
+++ b/stages-of-treatment.html
@@ -40,7 +40,7 @@
             <div class="float-img1">
                 <img src="./images/body1.jpg" alt="">
             </div>
-            <h1>مراحل عالج الإدمان</h1>
+            <h1>مراحل علاج الإدمان</h1>
             <h5>خطوات علاج الإدمان</h5>
             <p>
                 أذا كنت تتعاطى الهيروين أو الشابوا أو الحشيش أو االستروكس أو الكحول أو الترمادول أو الكوكايين أو الفودوو أو البودر أو أي<br>
